--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ set(EXE_NAME CImg-Fill-Screen)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(${EXE_NAME} Main.cpp)
+add_executable(${EXE_NAME} main.cpp)
